updated css media queries

--- a/index.html
+++ b/index.html
@@ -55,31 +55,27 @@
                         spectrum of borrowers. With our strong balance sheet, we can offer great conventional and
                         portfolio
                         loan products that give you a competitive edge. </p><a href="">Learn more about product ></a>
-
                 </div>
                 <div class="grid_box">
                     <h3>Unique products</h3>
                     <p>Our loan programs offer a variety of solutions to help you compete effectively across a broad
                         spectrum of borrowers. With our strong balance sheet, we can offer great conventional and
                         portfolio
-                        loan products that give you a competitive edge. <a href="">Learn more about product ></a>
-                    </p>
+                        loan products that give you a competitive edge. </p><a href="">Learn more about product ></a>
                 </div>
                 <div class="grid_box">
                     <h3>Unique products</h3>
                     <p>Our loan programs offer a variety of solutions to help you compete effectively across a broad
                         spectrum of borrowers. With our strong balance sheet, we can offer great conventional and
                         portfolio
-                        loan products that give you a competitive edge. <a href="">Learn more about product ></a>
-                    </p>
+                        loan products that give you a competitive edge. </p><a href="">Learn more about product ></a>
                 </div>
                 <div class="grid_box">
                     <h3>Unique products</h3>
                     <p>Our loan programs offer a variety of solutions to help you compete effectively across a broad
                         spectrum of borrowers. With our strong balance sheet, we can offer great conventional and
                         portfolio
-                        loan products that give you a competitive edge. <a href="">Learn more about product ></a>
-                    </p>
+                        loan products that give you a competitive edge. </p><a href="">Learn more about product ></a>
                 </div>
             </div>
         </div>
@@ -89,11 +85,13 @@
         <div class="containr citizen_loan">
             <h2>Citizens Bank and Citizens One Home Loans</h2>
             <div class="wraper_box">
-                <p>The Home Lending Solutions division operates under the Citizens Bank brand within our banking
-                    footprint: Massachusetts, Rhode Island, Connecticut,</p>
-                <p>
-                    New Hampshire, Vermont, New York, New Jersey, Pennsylvania, Delaware, Ohio and Michigan. Outside of
-                    this footprint, we market our home lending </p>
+                <p>The Home Lending Solutions division operates under the Citizens Bank
+                    brand within our banking footprint: Massachusetts, Rhode Island,
+                    Connecticut, New Hampshire,
+                    Vermont, New York, New Jersey, Pennsylvania, Delaware, Ohio and Michigan. Outside of this footprint,
+                    we market our home lending products under the Citizens One Home Loans brand and actively recruit
+                    loan officers in the following states: Illinois, Indiana, Kentucky, Maryland, Virginia, North
+                    Carolina and South Carolina, as well as in Washington, D.C.</p>
             </div>
         </div>
     </section>
