updated css media queries

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </nav>
     </header>
-    <!-- baner area start here  -->
+    <!-- banner area start here  -->
     <section class="containr_full">
         <div class="baner_area" style="background-image: url(assets/img/baner.jpg);">
             <div class="bolar"></div>
